; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kpi_socket.c_sock_sendmbuf.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kpi_socket.c_sock_sendmbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msghdr = type { i64, i32* }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sock_sendmbuf(i32 %0, %struct.msghdr* %1, i32* %2, i32 %3, i64* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.msghdr*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64*, align 8
  store i32 %0, i32* %7, align 4
  store %struct.msghdr* %1, %struct.msghdr** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i64* %4, i64** %11, align 8
  %12 = load i32*, i32** %9, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %27, label %14

14:                                               ; preds = %5
  %15 = load %struct.msghdr*, %struct.msghdr** %8, align 8
  %16 = icmp ne %struct.msghdr* %15, null
  br i1 %16, label %17, label %35

17:                                               ; preds = %14
  %18 = load %struct.msghdr*, %struct.msghdr** %8, align 8
  %19 = getelementptr inbounds %struct.msghdr, %struct.msghdr* %18, i32 0, i32 1
  %20 = load i32*, i32** %19, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %27, label %22

22:                                               ; preds = %17
  %23 = load %struct.msghdr*, %struct.msghdr** %8, align 8
  %24 = getelementptr inbounds %struct.msghdr, %struct.msghdr* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %35

27:                                               ; preds = %22, %17, %5
  %28 = load i32*, i32** %9, align 8
  %29 = icmp ne i32* %28, null
  br i1 %29, label %30, label %33

30:                                               ; preds = %27
  %31 = load i32*, i32** %9, align 8
  %32 = call i32 @m_freem(i32* %31)
  br label %33

33:                                               ; preds = %30, %27
  %34 = load i32, i32* @EINVAL, align 4
  store i32 %34, i32* %6, align 4
  br label %42

35:                                               ; preds = %22, %14
  %36 = load i32, i32* %7, align 4
  %37 = load %struct.msghdr*, %struct.msghdr** %8, align 8
  %38 = load i32*, i32** %9, align 8
  %39 = load i32, i32* %10, align 4
  %40 = load i64*, i64** %11, align 8
  %41 = call i32 @sock_send_internal(i32 %36, %struct.msghdr* %37, i32* %38, i32 %39, i64* %40)
  store i32 %41, i32* %6, align 4
  br label %42

42:                                               ; preds = %35, %33
  %43 = load i32, i32* %6, align 4
  ret i32 %43
}

declare dso_local i32 @m_freem(i32*) #1

declare dso_local i32 @sock_send_internal(i32, %struct.msghdr*, i32*, i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
